# solana-tx-bench

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
docs/: artifacts.md  methodology.md  polaris-enrichment.md  providers.md  public-report-template.md  related-work.md
docs/reports/: index.html
docs/reports/leader-paced-2026-07-01T095542.712Z/: index.html  report.json  report.md  tail-events.csv  tail-events.json  tails.html
docs/reports/leader-paced-2026-07-01T095542.712Z/policy-comparison/: comparison.json  comparison.md  index.html
docs/reports/quic-zero-1h-20260630T091402Z/: index.html
examples/: bench.example.yaml  rpcedge-quic-frankfurt.yaml
src/: adapters.rs  artifacts.rs  collectors.rs  compare.rs  config.rs  leader_paced.rs  leader_slots.rs  lib.rs  main.rs  observations.rs  report.rs  runner.rs  slot_signal.rs  tx.rs
