[package]
name = "solana-tx-bench"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/your-org/solana-tx-bench"
description = "Reusable Solana transaction sender benchmark with pluggable provider adapters"
publish = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
bincode = "1.3"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
solana-client = "4.1.0"
solana-compute-budget-interface = "3.0.0"
solana-sdk = "4.0.1"
solana-system-interface = { version = "3.2.0", features = ["bincode"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
yellowstone-grpc-client = "13.1.1"
yellowstone-grpc-proto = "12.5.0"

[dev-dependencies]
tempfile = "3.14"
wiremock = "0.6"
